--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+langchain>=0.2.2
+langchain-community
 langchain-astradb
-langchain
-langchain-community 
 langchain-groq
+sentence-transformers
+InstructorEmbedding
 datasets
 pypdf
 python-dotenv
